added validation for firstName, lastName and email

--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -495,4 +495,11 @@ padding-bottom: 73px;
     padding-bottom: 50px;
 }
 }
+ 
+.ng-invalid.ng-touched {
+    border-color: red;
+  }
   
+  .invalid-feedback{
+    color: red;
+  }
