--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* @import '/home/annapurna/Documents/formValidationInAngular/node_modules/alertify.js/dist/css/alertify.css' */
