getting user list from local storage in users list table

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -105,7 +105,8 @@
                         </div>
                     </div>
                     <div>
-                        <button class="btn btn--radius-2 btn--red" type="submit">Register</button>
+                        <button class="btn btn--radius-2 btn--red"
+                         type="submit" (click)="nextPage()">Register</button>
                     </div>
                 </form>
             </div>
