--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -2,7 +2,7 @@
     <div class="container-table100">
         <div class="wrap-table100">
             <div class="table100">
-                <table>
+                <table class="table">
                     <thead>
                         <tr class="table100-head">
                             <th class="column1">Id</th>
